# thermo-guard

./: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
docs/: esxi-cluster-shutdown-requirements.md  implementation-doc.md  requirements-zh.md  requirements.md
src/thermo_guard/: __init__.py  cluster_operations.py  config.py  ilo_client.py  main.py  meraki_client.py  vcenter_client.py
